--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,106 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  padding: 0;
+  margin: 0;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 100vh;
+
 }
+main{
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  background: linear-gradient( #1c5380 50%, #ffffff 50%);
+  height: 80vh;
+}
+.phones{
+  margin-left: 100px;
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.phones img{
+  width: 300px;
+}
+.moments{
+  background: #ffffff;
+  border-radius: 5px;
+  box-shadow: 2px 0px 0px gray;
+}
+.moments h3{
+  font-size: 32px;
+  color: #06365f;
+  text-align: left;
+  padding-left: 50px;
+  width: 60%;
+}
+.moments p{
+  margin-top: 8px;
+  margin-bottom: 8px;
+  color:grey;
+  font-style: normal;
+  font-weight: normal;
+  text-align: left;
+  padding-left: 50px;
+  padding-right: 50px;
+}
+.instagram{
+  width:39%;
+  margin-left: 100px;
+  margin-top: 50px;
+}
+footer{
+  margin-bottom: 100px;
+  height: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+footer ul {
+  list-style: none;
+  color: #1c5380;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-evenly;
+  font-weight: bold;
+  width: 35%;
+  margin: 0px;
+}
+footer p{
+  margin: 0px;
+  font-weight: bold;
+  color: gray;
+}
+.app{
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-around;
+  margin-top:10px;
+}
+.home{
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
+.log{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100px;
+  border: 1px solid;
+  border-color: #ffffff;
+  border-radius: 5px;
+
+}
+.log p{
+  color: whitesmoke;
+  font-weight:normal;
+}
+
