--- a/styles/style.css
+++ b/styles/style.css
@@ -6,14 +6,87 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+  background-image: linear-gradient(
+      180deg,
+      rgba(255, 255, 255, 0) 30%,
+      #fff 30%
+    ),
+    url("../images/bgtile.png");
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.order {
-  display:flex;
+main,
+nav ul,
+footer {
+  display: flex;
   flex-direction: row;
-}
-main {
-  height:90vh;
   justify-content: space-around;
+  align-items: center;
+}
+
+nav ul li {
+  text-decoration: none;
+  list-style: none;
+  padding: 0px 15px;
+  color: #1c5380;
+}
+
+span {
+  color: rgb(195, 195, 195);
+}
+
+nav ul li,
+span {
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+main {
+  width: 80%;
+}
+
+.about {
+  width: 55%;
+}
+
+.info {
+  background: url("../images/frame.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 40px;
+  font-size: 18px;
+}
+
+header,
+button {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button {
+  width: 22%;
+  background-image: linear-gradient(rgb(102, 161, 216), #1c5380);
+  border: 1px solid #06365f;
+  border-radius: 5px;
+  padding: 15px;
+  color: #fff;
+  font-weight: 700;
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+h1 {
+  margin-top: 0px;
+  color: #06365f;
+}
+
+article {
+  padding-top: 10px;
 }
