--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,6 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("../images/bgtile.png") repeat-x;
+  background-color: #f7f7f9;
 }
