--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,80 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  /*background-color:aquamarine;*/
+}
+
+#Main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 80px;
+}
+
+#left-side{
+  width: auto;
+  padding-left: 45px;
+}
+
+#titulo {
+  display:flex;
+  justify-content:space-between;
+  align-items: center;
+}
+
+#login {
+  height: 40px;
+  width: 100px;
+  color:whitesmoke;
+  border: 2px solid rgba(48,96,132,255);
+  border-radius: 3px;
+  background-image: url(../images/bgtile.png);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
+}
+
+#login > p {
+  color: #e1f4fc;
+}
+
+#text {
+  background-image: url(../images/frame.png);
+  background-repeat:no-repeat;
+  color: #06365f;
+
+}
+
+h2 {
+  padding-left: 30px;
+  padding-top: 30px;
+}
+
+#text > p {
+  padding: 0 30px;
+  color: #273746;
+  }
+
+  .image {
+    padding-left: 30px 
+  }
+
+footer > ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+}
+
+li {
+  padding: 0 15px;
+  color: #1c5380;
+  text-transform: uppercase;
+  font-weight: 750; 
+}
+
+#c-insta {
+  color:gray
 }
