--- a/styles/style.css
+++ b/styles/style.css
@@ -8,14 +8,88 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 10px 0;
 }
-#nav-bar {
-  font-size: 12px;
-  margin: 50px 400px;
+
+
+#main-section{
+  display:flex;
+  justify-content: center;
+  background-image: url(../images/bgtile.png); 
+  background-repeat: repeat-x;
+  background-color: white;
+  margin: 0 300px;
+
 }
 
-nav{
-  margin: 10px;
+.phones{
+  margin: 30px 40px 10px 40px;
+  padding: 80px;
 }
+
+#column{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 80px;
+}
+.instagram{
+  display: flex;
+  margin-bottom: 20px;
+  justify-content: space-between;
+}
+
+.btn{
+  display: flex;
+  height: 40px;
+  width: 120px;
+  box-sizing: content-box;
+  background-color:transparent;
+  border: 1px solid #06365f;
+  box-shadow: 1px 1px #06365f;
+  text-align: center;
+  margin: auto 50px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.btn img{
+  height: 30px;
+}
+
+.btn-login{
+  color: white;
+}
+
+
+#text{
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding-left: 45px;
+  padding-bottom: 20px;
+  margin-bottom: 10px;
+}
+
+#text > h1{
+  color: #06365f;
+  text-align: justify;
+}
+
+#downloads{
+  display: flex;
+  justify-content: flex-start;
+  margin-left: 20px;
+}
+
+#downloads > div{
+  margin: 0 20px;
+}
+
+
+#nav-bar {
+  font-size: 12px;
+  margin: 10px 550px;
+}
+
 
 nav ul {
   list-style: none;
@@ -27,7 +101,8 @@ nav ul {
 
 a{
   text-decoration: none;
-  color: #06365f;
+  color: #1c5380;
+  font-weight: bold;
 }
 
  .copy {
