--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ body {
    background: url("/images/bgtile.png");
   background-repeat: repeat-x;
   /*background-image: url("../images/bgtile.png");*/
-  /*background-image: url("../images/frame.png");*/
+  /*/background-image: url("../images/frame.png");*/
 
 }
 .text h2{
