--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ body {
    background: url("/images/bgtile.png");
   background-repeat: repeat-x;
   /*background-image: url("../images/bgtile.png");*/
-  /*/background-image: url("../images/frame.png");*/
+  /*background-image: url("../images/frame.png");*/
 
 }
 .text h2{
@@ -18,7 +18,7 @@ body {
 }
 .container{
   display:flex;
-  justify-content: space-between;
+  justify-content: center;
   /*background-color:red;*/
   width: 90%;
   /*background-color: white;;*/
@@ -31,20 +31,32 @@ body {
   /*background-color: pink;*/
   display:flex;
   padding: 20px 0px;
-  align-items: space-between;
+  justify-content: space-around;
+  align-items: center;
   /*background-color: pink;*/
 }
-.button{
-  background-color: #1c5380;
+.login{
+  
   border-radius: 10%;
-  width:90px;
-  height: 20px;
+  color:white;
+  width:100px;
+  height: 30px;
+  /*background-color: red;*/
+  display:flex;
+  justify-content: space-around;
+  padding: 5px;
+  text-decoration: none;
+}
+.button{
+  color:white;
+  background-color: #1c5380;  
 }
 .text{
-  padding:15px;
+  padding:8px 8px;
   border-radius: 10px;
   background-color: white;
-  height: 60%;
+  height: 70%;
+  text-align:left;
   /*line-height:*/
 }
 button{
@@ -54,12 +66,16 @@ button{
   margin-left:20px;
   margin-top: 10px;
 }
+
 footer ul{
+  
   display:flex;
   list-style:none;
   justify-content: space-between;
   align-items: center;
   text-transform: capitalize;
+  color:#1c5380;
+  font-weight: bold;
   /*Opacidad transparencia para el @2014 Instagram*/
   /*opacity: 0.5;*/
 }
