--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,7 @@ body {
 .header{
   /*background-color: pink;*/
   display:flex;
-  padding: 20px 0px;
+  padding: 10px 0px;
   justify-content: space-around;
   align-items: center;
   /*background-color: pink;*/
@@ -38,45 +38,49 @@ body {
 .login{
   
   border-radius: 10%;
-  color:white;
-  width:100px;
+ width:100px;
   height: 30px;
-  /*background-color: red;*/
+  background-color: #1c5380; 
   display:flex;
   justify-content: space-around;
   padding: 5px;
   text-decoration: none;
+ 
 }
 .button{
   color:white;
-  background-color: #1c5380;  
+  background-color: #1c5380;
+  border:none;
+  weight: bold;
 }
 .text{
-  padding:8px 8px;
+  padding:8px 20px;
   border-radius: 10px;
   background-color: white;
   height: 70%;
   text-align:left;
   /*line-height:*/
 }
-button{
-  background-color: #1c5380;
-}
+
 .store-icons img{
   margin-left:20px;
   margin-top: 10px;
 }
 
 footer ul{
-  
+  margin:30px 90px;
+ width: 70%;
   display:flex;
   list-style:none;
   justify-content: space-between;
-  align-items: center;
   text-transform: capitalize;
   color:#1c5380;
   font-weight: bold;
   /*Opacidad transparencia para el @2014 Instagram*/
   /*opacity: 0.5;*/
+}
+ul .exception{
+  color:gray;
+  
 }
 
