--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,97 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+  background: linear-gradient(#4e7699 30%, white 0% );
+}
+
+#principal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  padding: 5% 5% 0% 5%;
+}
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+
+.iphone-box {
+  width: 37.5%;
+  text-align: center;
+}
+
+.text-box {
+  width: 37.5%;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+.login-box {
+  display: flex;
+  text-align: center;
+  justify-content: left;
+  flex-direction: row;
+  justify-items: center;
+  padding-bottom: 5%;
+}
+
+
+.info-box {
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px 10px 0 10px;
+  margin: 0;
+}
+
+.info-box ul, li, a {
+  margin: 8% 1.2% 0 1.2%;
+  padding: 0;
+}
+
+footer {
+  display: flex;
+  padding: 1%;
+  margin: 4% 0 2% 0;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+  color: rgb(152, 152, 152);
+}
+
+footer ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  color: #4e7699;
+}
+
+footer a, p {
+  padding: 5px;
+  margin: 10px;
+  font-weight: 700;
+}
+
+.info-box h1 {
+  color: #06365f;
+  font-size: 1.3em;
+  padding-left: 4%;
+}
+
+.info-box p {
+  font-weight: normal;
+  font-size: 0.8em;
+}
+
+.login-btn {
+  padding: 10px;
 }
