--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,124 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+*{
+  margin: 0;
+  padding: 0;
 
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+a {
+  text-decoration: none;
+  padding: 20px;
+  color: rgb(59, 104, 145) ;
+}
+
+
+
+
+.flex-container {
+   display: flex;
+   justify-content: center;
+   padding: 20px;
+   margin: 30px;
+  
+
+}
+
+.flex-container2 {
+  display: flex;
+  justify-content: center;
+  align-items: center
+
+ 
+
+}
+
+.flex-container3 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center
+
+ 
+
+}
+
+.login{
+  padding: 10px;
+  margin: 30px;
+  color: white;
+   border: 1px solid #17212e;
+}
+.login2{
+
+ 
+  color: white;
+  padding: 10px;
+}
+
+
+
+
+.instagram {
+  padding-bottom: 20px;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  margin-left: 30px;
+  background-color: white;
+  width: 500px;
+  border-radius: 5px
+ 
+
+}
+
+footer{
+
+
+  display: flex;
+  justify-content: center;
+
+}
+
+.menu-footer{
+  font-weight: bold;
+  color: rgb(59, 104, 145) ;
+
+
+}
+
+.menu-footer2{
+  font-weight: bold;
+  color: gray ;
+
+}
+
+.logo {
+  padding-left: 20px;
+  padding-top: 20px;
+  margin-left: 30px;
+  margin-top: 30px;
+
+}
+
+div p {
+  margin: 20px;
+
+}
+
+footer p {
+
+  margin: 20px;
+}
+
+h2 {
+  color: rgb(59, 104, 145) ;
+  margin: 20px;
 }
