--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ section{
   align-items: center;
   padding: 6px 10px;
   cursor: pointer;
-  border: 3px solid #335F86;
+  border: 2px solid #06365f7e;
   border-radius: 3px;
   overflow: visible;
   text-decoration: none;
