--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,119 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
+  background: linear-gradient(180deg, hsl(207, 45%, 51%) 30%, rgb(255,255,255) 30%);
+
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
 }
+
+p {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding-left: .5cm;
+  text-align: left;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+margin-left: 20%;
+margin-right: 20%;
+margin-top: 6%;
+
+
+
+
+}
+.div1{
+  padding-right: .7cm;
+}
+.div2{
+  flex:3;
+  width: 15px;
+  background-color: white;
+  padding-left: .7cm;
+  border: 2px , solid, #eee;
+border-radius: 20px;
+box-sizing: border-box;
+box-shadow: 2px 2px 10px 0 rgba(238, 238, 238, 0.425).
+  
+}
+
+
+}
+.div3 {
+  
+  display: inline-table;
+  flex-direction: row;
+  justify-content: flex-start;
+  background-color: hsl(207, 45%, 51%);
+  
+
+}
+
+.div4 {
+  padding-left: 2cm;
+}
+
+.div5 {
+  display: flex;
+  float:left;
+  flex-direction: row;
+  justify-content: left;
+  margin-left: .5cm;
+  padding-top: 0.7cm;
+  
+}
+
+.box1 {
+  flex:2;
+}
+
+.box4 {
+  padding-right: 0.5cm;
+}
+  
+  
+}
+h1 {
+  color: darkblue;
+  padding-left: .5cm
+  ;
+}
+ul {
+  padding-right: 0.05cm;
+  margin-top: 8%;
+  color: lightblue;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+ 
+ 
+
+}
+
+.padding-captur {
+  padding-top: 0.5cm;
+  padding-bottom: 0.5cm;
+  padding-left:.5cm;
+  color:darkblue
+}
+
+.padding-list {
+  padding-right:0.5cm;
+  font-weight: bold;
+  font-family: sans-serif;
+}
+
+
+
+
+
