--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,110 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  margin: 0;
+  padding: 0;
+}
+img {
+  width: 100%;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 10px 10px 10px 10px;
+  background-image: url(../images/bgtile.png);
+  
+  
+  background-repeat: repeat-x; 
+
 }
+
+section{
+  display: flex;
+  justify-content: center;
+  margin: 100px 100px 100px 100px;
+}
+
+div {
+  margin-right: 25px;
+  
+  
+}
+
+article {
+  
+  text-decoration: solid;
+  width: 550px;  
+  
+  padding: 20px 20px 20px 20px
+}
+h2{
+  padding-top: 25px;
+  padding-left: 25px;
+  color: #06365f;
+}
+a{
+  text-decoration: none;
+}
+p{
+  padding-left: 25px;
+}
+.head {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  flex: 1;
+  margin: 0; 
+ 
+}
+.insta{
+  width: 250px;
+}
+
+.order {
+  width: 45px;
+  
+}
+.store{
+  padding: 0;
+  padding-left: 25px;
+  display: flex;
+  justify-content: flex-start;
+  flex: 1;
+  margin: 0;
+ 
+  
+}
+.boton{
+  display: flex;
+  color: #1c5380
+}
+ul{
+  display: flex;
+  justify-content: center;
+  margin-right: 50px;
+  text-transform: uppercase;
+  color: #1c5380;
+}
+li{
+  margin-right: 45px;
+  list-style: none;
+  text-decoration: none;
+  
+}
+.backg{
+  background-image: url(../images/frame.png);
+  background-size: 100%;
+  width: 100%;
+  
+}
+
+.marca{
+  color: grey;
+}
+
+
+
+
+
+
