--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,97 @@
 /*
 Colors to use:
-dark blue: #06365f
+dark blue: 
 light blue: #1c5380
 */
+
+ {
+  margin: 0;
+  padding: 0;
+}
+
+
+img {
+  width: 100%;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+h1 {
+  color: #06365f;
+}
+
+a {
+  font-weight: bold;
+  color: #1c5380;
+  text-decoration: none;
+  text-transform: uppercase;
+} 
+
+
+
+.flex-container{
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: flex-start;
+  align-content: flex-start;
+  margin-left: 100px;
+  margin-top: 90px;
+  margin-bottom: 50px;
+  margin-right: 100px;
+}
+
+.izquierda{
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+}
+
+.logo{
+  display: flex;
+  width: 60%;
+  margin-bottom: 25px;
+}
+
+
+
+.derecha{
+  display: flex;
+  flex-direction: column;
+  flex-basis: 45%;
+  padding-left: 50px;
+  
+}
+
+.botones-descarga{
+  display: flex;
+  flex-direction: row;
+  width: 60%;
+
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  margin-left: 200px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: 200px;
+
+}
+
+
+.cuadro-info{ 
+  padding: 0px 40px 40px 40px;
+  background-image: url("/images/frame.png");
+  background-size: cover;
+  background-position:inherit;
+
+}
+
+
+
